--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,9 @@ endif()
 
 LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
-find_package(OpenCV 3.3 QUIET)
+find_package(OpenCV 3.0 QUIET)
 #if(NOT OpenCV_FOUND)
-#   find_package(OpenCV 2.4.3 QUIET)
+#find_package(OpenCV 2.4.3 QUIET)
 if(NOT OpenCV_FOUND)
 message(FATAL_ERROR "OpenCV > 3.0 not found.")
 endif()
@@ -120,8 +120,8 @@ Examples/Monocular/mono_euroc.cc)
 target_link_libraries(mono_euroc ${PROJECT_NAME})
 
 # Build tools
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/tools)
-add_executable(bin_vocabulary
-tools/bin_vocabulary.cc)
-target_link_libraries(bin_vocabulary ${PROJECT_NAME})
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/tools)
+#add_executable(bin_vocabulary
+#tools/bin_vocabulary.cc)
+#target_link_libraries(bin_vocabulary ${PROJECT_NAME})
 
